[package]
name = "cr"
version = "0.1.1"
license = "MIT/Apache-2.0"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
description = "Rust safe bindings for cr.h: A Simple C Hot Reload Header-only Library"
keywords = ["live", "dynamic", "reload", "addins", "plugins"]
repository = "https://github.com/Neopallium/cr-sys"
homepage = "https://github.com/Neopallium/cr-sys"
edition = "2018"

[features]
# Optional feature to build cr-sys wihtout host side code.
# Use this feature when building a guest plugin.
guest = ["cr-sys/guest"]

[dependencies]
cr-sys = "0.1.1"

[[example]]
name = "basic_host"
crate-type = ["bin"]

[[example]]
name = "basic_guest"
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"
