[package]
name = "cr-host-sys"
version = "0.1.0"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
edition = "2018"
links = "cr-host"
build = "build.rs"

[dependencies]

[[example]]
name = "basic_host"
crate-type = ["bin"]

[[example]]
name = "basic_guest"
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"
